syntax = "proto2";
package douyin.relation;
option go_package = ".;relation";

message Video {
    required int64 id = 1; // 视频唯一标识
    required User author = 2; // 视频作者信息
    required string play_url = 3; // 视频播放地址
    required string cover_url = 4; // 视频封面地址
    required int64 favorite_count = 5; // 视频的点赞总数
    required int64 comment_count = 6; // 视频的评论总数
    required bool is_favorite = 7; // true-已点赞，false-未点赞
    required string title = 8; // 视频标题
}

message User {
    required int64 id = 1; // 用户id
    required string name = 2; // 用户名称
    optional int64 follow_count = 3; // 关注总数
    optional int64 follower_count = 4; // 粉丝总数
    required bool is_follow = 5; // true-已关注，false-未关注
    optional string avatar = 6; //用户头像
    optional string background_image = 7; //用户个人页顶部大图
    optional string signature = 8; //个人简介
    optional int64 total_favorited = 9; //获赞数量
    optional int64 work_count = 10; //作品数量
    optional int64 favorite_count = 11; //点赞数量
}

message Comment {
    required int64 id = 1; // 视频评论id
    required User user =2; // 评论用户信息
    required string content = 3; // 评论内容
    required string create_date = 4; // 评论发布日期，格式 mm-dd
}

message Message {
    required int64 id = 1; // 消息id
    required int64 to_user_id = 2; // 该消息接收者的id
    required int64 from_user_id =3; // 该消息发送者的id
    required string content = 4; // 消息内容
    optional string create_time = 5; // 消息创建时间
}